Set #simulator width/height in style.css

--- a/modules/3-network-scaling/style.css
+++ b/modules/3-network-scaling/style.css
@@ -49,8 +49,9 @@ footer {
     min-width: 400px;
 }
 
-
 #simulator{
     border: 1px solid black;
+    width: 400px;
+    height: 600px;
     background: #eeeeee;
 }
