--- a/modules/3-network-scaling/style.css
+++ b/modules/3-network-scaling/style.css
@@ -55,3 +55,9 @@ footer {
     height: 600px;
     background: #eeeeee;
 }
+
+#controls {
+    display: flex;
+    justify-content: center;
+    margin: 5px 0px;
+}
