--- a/modules/4-collective-behavior/styles/main.css
+++ b/modules/4-collective-behavior/styles/main.css
@@ -49,8 +49,8 @@ footer {
     min-width: 400px;
 }
 
-#ca {
-    width: 400px;
+#nest {
+    width: 800px;
     padding: 0px 0px;
     text-align: center;
 }
