--- a/modules/4-collective-behavior/styles/main.css
+++ b/modules/4-collective-behavior/styles/main.css
@@ -11,8 +11,6 @@ body {
 }
 
 body div {
-    max-width: 80%;
-    max-width: 1000px;
     min-width: 400px;
     margin: 0px auto;
 }
@@ -51,34 +49,28 @@ footer {
 }
 
 #nest {
-    width: 800px;
+    width: 832px;
     padding: 0px 0px;
     text-align: left;
     display: flex;
 }
 
 #nest-A {
-    width: 400px;
+    width: 416px;
     padding: 0px 0px;
     text-align: center;
 }
 
 #nest-B {
-    width: 400px;
+    width: 416px;
     padding: 0px 0px;
     text-align: center;
 }
 
-#left-prog {
-    width: 300px;
+.progress-bar {
+    width: 402px;
     transform: rotate(-90deg);
-    margin: 0px 0px;
-}
-
-#right-prog {
-    width: 300px;
-    transform: rotate(-90deg);
-    margin: 0px 0px;
+    margin: 0px -193px 193px -193px;
 }
 
 #arena {
@@ -87,8 +79,8 @@ footer {
 
 #prog-svg-prog {
     display: flex;
-    align-items: center;
-    justify-content: center
+    align-items: flex-end;
+    justify-content: center;
 }
 
 #settings {
