--- a/modules/4-collective-behavior/styles/main.css
+++ b/modules/4-collective-behavior/styles/main.css
@@ -4,14 +4,12 @@ html {
 }
 
 body {
-    width: 100%;
     padding: 0px;
     height: 100%;
     margin: 0px 0px 100px 0px;
 }
 
 body div {
-    min-width: 400px;
     margin: 0px auto;
 }
 
@@ -36,15 +34,9 @@ footer {
     padding: 13px 0px;
 }
 
-#container {
-    display: flex;
-    min-height: 800px;
-    margin-top: 20px;
-}
-
 #instructions {
-    width: 85%;
-    min-width: 400px;
+    width: 832px;
+    margin-top: 20px;
     text-align: center;
 }
 
@@ -53,18 +45,14 @@ footer {
     padding: 0px 0px;
     text-align: left;
     display: flex;
+    align-items: flex-end;
+    justify-content: center;
 }
 
-#nest-A {
+.nest-settings {
     width: 416px;
     padding: 0px 0px;
-    text-align: center;
-}
-
-#nest-B {
-    width: 416px;
-    padding: 0px 0px;
-    text-align: center;
+    margin: 0px 0px;
 }
 
 .progress-bar {
@@ -74,6 +62,7 @@ footer {
 }
 
 #arena {
+    width: 832px;
     text-align: center;
 }
 
