--- a/modules/3-network-scaling/style.css
+++ b/modules/3-network-scaling/style.css
@@ -4,17 +4,9 @@ html {
 }
 
 body {
-    width: 100%;
     padding: 0px;
+    width: 100%;
     height: 100%;
-    margin: 0px 0px 100px 0px;
-}
-
-body div {
-    max-width: 80%;
-    max-width: 1000px;
-    min-width: 400px;
-    margin: 0px auto;
 }
 
 header {
@@ -39,14 +31,16 @@ footer {
 }
 
 #container {
+    width: 800px;
+    margin: 0px auto;
     display: flex;
-    min-height: 800px;
-    margin-top: 20px;
+    justify-content: space-around;
 }
 
-#instructions {
-    width: 45%;
-    min-width: 400px;
+#controls {
+    width: 400px;
+    height: 600px;
+    border: 1px solid black;
 }
 
 #simulator{
@@ -55,11 +49,3 @@ footer {
     height: 600px;
     background: #eeeeee;
 }
-
-#controls {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 5px 0px;
-}
-
