--- a/modules/3-network-scaling/style.css
+++ b/modules/3-network-scaling/style.css
@@ -1,24 +1,17 @@
-html {
-    position: relative;
-    min-height: 100%;
-}
-
 body {
-    padding: 0px;
-    width: 100%;
-    height: 100%;
+    margin: 0px 0px 100px 0px;
 }
 
 header {
     padding: 1em;
-    color: white;
+    color: #ffffff;
     background: #8c1d40;
     clear: none;
     text-align: center;
 }
 
 footer {
-    color: black;
+    color: #000000;
     background: #ffc267;
     clear: none;
     text-align: center;
@@ -30,22 +23,64 @@ footer {
     padding: 13px 0px;
 }
 
-#container {
+.block {
     width: 800px;
     margin: 0px auto;
+}
+
+.block--centered {
+    text-align: center;
+}
+
+.block--bottom {
     display: flex;
-    justify-content: space-around;
 }
 
-#controls {
+.pane {
     width: 400px;
-    height: 600px;
+    height: 574px;
     border: 1px solid black;
 }
 
-#simulator{
-    border: 1px solid black;
-    width: 400px;
-    height: 600px;
+.pane--right {
     background: #eeeeee;
+}
+
+.segment {
+    padding: 1em;
+}
+
+.segment--bottom {
+    border-top: 1px solid black;
+}
+
+.segment__header {
+    margin-top: 0em;
+}
+
+.parameter {
+    display: flex;
+    flex-justify: space-between;
+}
+
+.parameter--first {
+    margin-bottom: 1em;
+}
+
+.parameter--mechanism {
+    margin-left: 2em;
+    margin-bottom: 1em;
+}
+
+.parameter__label {
+    margin-right: 1em;
+}
+
+.parameter__range {
+    flex-grow: 2;
+}
+
+.parameter__output {
+    margin-left: 1em;
+    width: 4em;
 }
