--- a/modules/2-2d-cellular-automata/src/style.css
+++ b/modules/2-2d-cellular-automata/src/style.css
@@ -4,8 +4,17 @@ h1 {
     text-align: center;
 }
 
-p {
+h2 {
     color: black;
+    font-family : "Lucida Grande", Verdana, Lucida, Arial, Helvetica, 宋体,sans-serif;
+    width:90%;
+    margin:20 auto;
+}
+
+p, li, h3, h4{
+    color: black;
+    width:90%;
+    margin:10 auto 20 auto;
     font-family : "Lucida Grande", Verdana, Lucida, Arial, Helvetica, 宋体,sans-serif;
     font-size: 0.5cm;
 }
@@ -25,4 +34,10 @@ input[type="button"] {
 .center {
     text-align: center;
     width: 100%;
+}
+
+.control {
+    color: black;
+    font-family : "Lucida Grande", Verdana, Lucida, Arial, Helvetica, 宋体,sans-serif;
+    font-size: 0.4cm;
 }
