--- a/modules/1-1d-cellular-automata/src/style.css
+++ b/modules/1-1d-cellular-automata/src/style.css
@@ -1,3 +1,26 @@
+header {
+    padding: 1em;
+    font-color: white;
+/*    background: #cc3311;
+*/    
+    background: lightgray;
+    clear: none;
+    text-align: center;
+}
+
+footer {
+    color: black;
+    background: white;
+    clear: none;
+    text-align: center;
+    font-size: 14px;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    padding: 13px 0px;
+}
+
+
 h1 {
     color: black;
     font-family : "Lucida Grande", Verdana, Lucida, Arial, Helvetica, 宋体,sans-serif;
